--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.example.lottry_app">
+    package="com.example.project_classes_secreen">
    <application
-        android:label="lottry_app"
+        android:label="project_classes_secreen"
         android:name="${applicationName}"
         android:icon="@mipmap/ic_launcher">
         <activity
